--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,13 @@
 body{
   background-color: white;
 }
+
+
+@layer utilities {
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+  .animation-delay-4000 {
+    animation-delay: 4s;
+  }
+}
